--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <table
             width="350px">
                 <tbody>
+                    <h1>Practice</h1>
                     <tr>
                         <td
                         align="left">
