Add Hello world

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             width="350px">
                 <tbody>
                     <h1>Practice</h1>
+                    <p>Hello world</p>
                     <tr>
                         <td
                         align="left">
